Fri Jan 29 20:55:00 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Moved pkt_chain_ release from destructor to stop() before
          MB allocators is deleted. This should fix a SEGV caused by
          this incorrect deletion order.
          
Fri Jan 29 16:51:05 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/BestEffortSession.h:
        * dds/DCPS/transport/multicast/BestEffortSession.cpp:
        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:
        * dds/DCPS/transport/multicast/MulticastSession.h:
        * dds/DCPS/transport/multicast/MulticastSession.inl:
        * dds/DCPS/transport/multicast/MulticastSession.cpp:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
        * dds/DCPS/transport/multicast/ReliableSession.h:
        * dds/DCPS/transport/multicast/ReliableSession.cpp:

          Updated reliability_lost behavior; added additional check in
          header_received to avoid spuriously updating nak_sequence_.

Thu Jan 28 20:43:58 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/expandColors.pl:

          New script to post process a published static HTML version of a
          TiddlyWiki document to translate the ColorPalette.  This
          replaces development of a plugin to do the processing
          internally.

        * performance-tests/Bench/bin/plot-jitter.gp:
        * performance-tests/Bench/bin/plot-transports.gp:

          Change the zoom range to [0:2500]

Thu Jan 28 16:36:26 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastDataLink.h:
        * dds/DCPS/transport/multicast/MulticastTransport.h:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:

          Fixed compiler warnings/errors for GCC and VC++.

Thu Jan 28 16:02:50 UTC 2010  Steven Stallion  <stallions@ociweb.com>
