@@ -1,3 +1,10 @@
+Fri Jan 29 21:57:37 UTC 2010  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
+        * dds/DCPS/transport/udp/UdpTransport.cpp:
+
+          Corrected refcounts.
+
 Fri Jan 29 20:55:00 UTC 2010  Yan Dai  <dai_y@ociweb.com>
 
         * dds/DCPS/transport/framework/TransportSendStrategy.cpp:
@@ -5,7 +12,7 @@ Fri Jan 29 20:55:00 UTC 2010  Yan Dai  <dai_y@ociweb.com>
           Moved pkt_chain_ release from destructor to stop() before
           MB allocators is deleted. This should fix a SEGV caused by
           this incorrect deletion order.
-          
+
 Fri Jan 29 16:51:05 UTC 2010  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/transport/multicast/BestEffortSession.h:
